A-level Accessibility edits to headings, sections, forms, links
Page Titles now all <h1>, not <h2>. Most content <section> now <main>.
Links have hover-state and underlines. Forms have aria-labels.

--- a/assets/scss/_calendar.scss
+++ b/assets/scss/_calendar.scss
@@ -231,6 +231,7 @@ button:hover, .button:hover, .select-buttons li:hover {
 
 button a {
   color: #fff;
+  border-bottom: none !important;
   &:hover, &:visited {
     color: #fff;
   }
@@ -238,6 +239,7 @@ button a {
 
 .button a {
   color: #fff;
+  border-bottom: none !important;
   &:hover, &:visited {
     color: #fff;
   }
