--- a/assets/scss/_mediaquery.scss
+++ b/assets/scss/_mediaquery.scss
@@ -107,6 +107,23 @@
   }
   .content {
   padding-right: 0em;
+    h1 {
+      font-size: 1.5rem; }
+
+    h2 {
+      font-size: 1.25rem; }
+
+    h3 {
+      font-size: 1.1875rem; }
+
+    h4 {
+      font-size: 1.125rem; }
+
+    h5 {
+      font-size: 1.0625rem; }
+
+    h6 {
+      font-size: 1rem; }
   }
   #mobile-nav {
     h1 {
