--- a/assets/scss/_footer.scss
+++ b/assets/scss/_footer.scss
@@ -2,7 +2,18 @@ footer {
   background: #000;
   padding-top: 25px;
   a {
-    color: $grey;
+    color: white;
+    &:hover {
+      border-bottom: none;
+    }
+  }
+}
+
+#copyright, #menu-footer-links {
+  a {
+    &:hover {
+      border-bottom: .125em solid;
+    }
   }
 }
 
