--- a/assets/scss/_navigation.scss
+++ b/assets/scss/_navigation.scss
@@ -1,3 +1,8 @@
+header {
+h1 { font-size: 2.35rem; font-family: $font-header; }
+h2 { font-size: 2rem; }
+}
+
 nav ul {
   list-style: none;
 }
@@ -344,7 +349,9 @@ ul.flyout li.active a, .nav-bar li ul li.active a {
     }
   }
 }
-
+.accordion .accordion-navigation > a, .accordion dd > a {
+border-bottom:none;
+}
 body {
   &.blue {
     #main_nav {
