--- a/assets/scss/_settings.scss
+++ b/assets/scss/_settings.scss
@@ -195,7 +195,7 @@ $font-family-sans-serif: 'gentona-light', Arial, sans-serif;
 // $include-html-type-classes: $include-html-classes;
 
 // We use these to control header font styles
-$header-font-family: 'quadon', Arial, sans-serif;
+$header-font-family: 'gentona-book', Arial, sans-serif;
 // $header-font-weight: $font-weight-normal;
 // $header-font-style: normal;
 // $header-font-color: $jet;
