--- a/assets/scss/_mediaquery.scss
+++ b/assets/scss/_mediaquery.scss
@@ -249,7 +249,7 @@ p, ul, ol, dl {
       }
     }
   }
-  #search-bar input[type="submit"], #field_search input[type="submit"] {
+  .search-bar input[type="submit"], #search-bar input[type="submit"], #field_search input[type="submit"] {
   border-top-left-radius: 0px;
   border-bottom-left-radius: 0px;
   }
