--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -6,7 +6,7 @@ $red: #8a2a2b;        //red
 $yellow: #cba052;     //yellow
 $rust: #6f2c3f;		    //rust
 $black: #2C2C33;     //black
-$grey: #B4B2AD;      //grey
+$grey: #e5e2e0;      //grey
 $flagship_icon: flagship-icon; //flagship icon
 $fa-font-path: "../fonts";
 
