removed links from mobile search_bar. increased size of search box on mobile.

--- a/assets/scss/_mediaquery.scss
+++ b/assets/scss/_mediaquery.scss
@@ -87,6 +87,11 @@
     #desktop-nav {
     display: none;
   }
+  .search-bar input, #search-bar input {
+    &[type="text"] {
+      width: 88%;
+    }
+  }
 }
 
 @media only screen and (min-width: 767px) {
