--- a/assets/scss/_plugins.scss
+++ b/assets/scss/_plugins.scss
@@ -155,7 +155,7 @@ div.orbit-wrapper div.timer, .orbit-timer {
   display: none;
 }
 
-#caption {
+.caption {
   &.vertical {
     min-height: 425px;
     position: relative;
