removed <form> element from directory-search; faculty books height set to 100%

--- a/assets/scss/_mediaquery.scss
+++ b/assets/scss/_mediaquery.scss
@@ -182,7 +182,6 @@
     width: 200px;
   }
   .book-entry {
-    height: 100%;
     img {
       height: auto;
       width: 84%;
@@ -277,7 +276,7 @@ p, ul, ol, dl {
       }
     }
   }
-  .search-bar input[type="submit"], #search-bar input[type="submit"], #field_search input[type="submit"] {
+  .search-bar input[type="submit"], #search-bar input[type="submit"], #fields_search input[type="submit"] {
   border-top-left-radius: 0px;
   border-bottom-left-radius: 0px;
   }
