--- a/assets/scss/_calendar.scss
+++ b/assets/scss/_calendar.scss
@@ -1,187 +1,3 @@
-.SEClear {
-  float: left;
-}
-
-#SECalendarListWrapper {
-  max-width: 300px;
-  table {
-    border: none;
-    margin: 0;
-    background: transparent;
-    tbody tr {
-      &.even, &:nth-child(even) {
-        background: none;
-      }
-    }
-    thead tr th, tfoot tr th, tbody tr td, tr td, tfoot tr td {
-      display: block;
-    }
-  }
-  .SECalendarEventLocation:before {
-    content: 'Location: ';
-    color: $rust;
-  }
-  .SECalendarEventTime:before {
-    content: 'Time: ';
-    color: $rust;
-  }
-  .SECalendarEventLocation, .SECalendarNoEvent {
-    margin-bottom: 20px;
-  }
-  table tbody tr td {
-    padding: 0 10px 4px 10px;
-  }
-  .SECalendarEventDate {
-    color: #000;
-    font-size: 20px;
-    margin-bottom: 10px;
-    font-family: $font-subhead;
-
-  }
-  .SECalendarEventTime, .SECalendarEventLocation {
-    color: #333;
-    font-size: 10px;
-    font-family: $font-stack;
-    font-weight: 300;
-    font-style: normal;
-    text-transform: uppercase;
-    letter-spacing: 1px;
-  }
-  .SECalendarEventName, .SECalendarNoEvent, .SECalendarEventName a {
-    color: #3478b6;
-    font-size: 14px;
-    font-family: $font-stack;
-    font-weight: 300;
-    font-style: normal;
-  }
-  .SECalendarThumb {
-    display: none;
-  }
-}
-
-.SECalendarEventName h3 {
-  font-family: $font-subhead;
-  font-weight: 400;
-  font-style: normal;
-  font-size: 18px;
-}
-
-.SECalendarEventDetails {
-  border-color: transparent;
-  padding: 5px 10px;
-  -webkit-border-radius: 10px;
-  -moz-border-radius: 10px;
-  border-radius: 10px;
-  .SECalendarProperty {
-    margin-bottom: 8px;
-  }
-}
-
-#SECalendarListWrapper .SECalendarPropertyLabel {
-  font-family: $font-subhead;
-  font-weight: 400;
-  font-style: normal;
-  float: left;
-  margin-right: 10px;
-}
-
-.SEbuttons {
-  padding-top: 10px;
-}
-
-.SECalendarEventDetails p {
-  margin-bottom: 0;
-}
-
-#SECalendarWrapper {
-  width: 100%;
-  table {
-    width: 100%;
-  }
-}
-
-#SECalendarNav {
-  margin: 10px auto 20px auto;
-  div {
-    display: inline;
-    vertical-align: middle;
-  }
-}
-
-a.rssLink {
-  display: none;
-}
-
-#SECalendarSearch {
-  .SECalendarLocation, .SECalendarKeyword input.SEApplicationText, .SECalendarType label, .SECalendarKeyword label {
-    display: none;
-  }
-}
-
-#SECalendarNav .SECalendarMonth {
-  font-family: $font-header;
-  font-size: 28px;
-  margin-top: 5px;
-}
-
-#SECalendar {
-  padding-bottom: 50px;
-  .SECalendarEventName a, .SECalendarEventTime {
-    color: #FFF;
-  }
-}
-
-#SECalendarSearch {
-  margin-top: 10px;
-}
-
-.SECalendarMonth {
-  font-size: 18px;
-  text-align: center;
-}
-
-.SECalendarDay a {
-  color: #000;
-}
-
-#calendar_container iframe {
-  height: 785px!important;
-}
-
-#SECalendarTable td {
-  border: 1px solid #ddd;
-  width: 14.28%;
-  height: 138px;
-}
-
-.dark_blue_bg, #SECalendar .SECalendarEventDetails.color8, .color8 {
-  background: #003366 !important;
-}
-
-.grey_bg, #SECalendar .SECalendarEventDetails.color9, .color9 {
-  background: #666 !important;
-}
-
-.rust_bg, #SECalendar .SECalendarEventDetails.color7, .color7 {
-  background: #663333 !important;
-}
-
-.green_bg, #SECalendar .SECalendarEventDetails.color4, .color4 {
-  background: $green !important;
-}
-
-.purple_bg, #SECalendar .SECalendarEventDetails.color5, .color5 {
-  background: $purple !important;
-}
-
-.fushia, #SECalendar .SECalendarEventDetails.color6, .color6 {
-  background: #993366 !important;
-}
-
-.yellow_bg, #SECalendar .SECalendarEventDetails.color2, .color2 {
-  background: $yellow !important;
-}
-
 .orange_bg {
   background: #cc6600 !important;
   &.button:hover {
@@ -189,9 +5,6 @@ a.rssLink {
   }
 }
 
-#SECalendar .SECalendarEventDetails.color3, .color3 {
-  background: #cc6600 !important;
-}
 
 .bright_blue_bg {
   background: #3399ff !important;
@@ -200,9 +13,6 @@ a.rssLink {
   }
 }
 
-.color0, .SECalendarPrevMonth, .SECalendarNextMonth {
-  background: #3399ff !important;
-}
 
 button, .button, .select-buttons li, .SECalendarPrevMonth, .SECalendarNextMonth {
   border: none;
@@ -252,57 +62,6 @@ button a {
   }
 }
 
-.SECalendarPrevMonth a, .SECalendarNextMonth a {
-  color: #fff;
-}
-
-#SECalendar .SECalendarEventDetails {
-  background: #3478b6 !important;
-  &.color1 {
-    background: #3478b6 !important;
-  }
-}
-
-.event_meta li, .event_desc p {
-  font-size: 1rem;
-}
-
-/*table.tribe-events-calendar thead tr th {
-    color: white !important;
-}
-
-.tribe-events-day .tribe-events-day-time-slot h5 {
-  color: $black !important;
-}
-
-#tribe-events-day .tribe-events-content {
-  float: left !important;
-  width: inherit !important;
-}
-
-.tribe-events-event-meta.vcard {
-    padding: 0;
-}
-
-.tribe-event-title {
-  font-size: 1.125rem;
-  margin-bottom: 5px;
-}
-
-.tribe-event-duration {
-  font-size: 1rem;
-  margin-bottom: 20px;
-}
-.tribe-events-widget-link {
-  padding: 0 20px;
-}
-
-.tribe-events-event-meta .tribe-events-meta-group {
-  display: inherit !important;
-  float: none !important;
-  width: inherit !important;
-} */
-
 footer.timely.ai1ec-event-footer {
     background: inherit;
 }
@@ -316,6 +75,20 @@ footer.timely.ai1ec-event-footer {
   font-family: $font-subhead !important;
 }
 
-span.ai1ec-event-title {
-  font-size: 1.1rem !important;
+.ai1ec-agenda-widget-view .ai1ec-date, .ai1ec-agenda-widget-view .ai1ec-date.ai1ec-today,{
+  background: none !important;
 }
+
+.ai1ec-agenda-view .ai1ec-date.ai1ec-today {
+  border-top: none !important;
+  background: none !important;
+}
+
+.timely {
+  font-family: inherit !important;
+}
+
+.ai1ec-agenda-widget-view .ai1ec-event .ai1ec-event-time, .ai1ec-agenda-widget-view .ai1ec-event>a {
+  color: $black;
+}
+
